--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,4 @@
 # knicked from https://youtu.be/U-omALWIBos / https://www.josean.com/posts/tmux-setup
-set -g default-terminal "screen-256color"
-
 unbind %
 bind | split-window -h
 
@@ -28,6 +26,7 @@ set -g mouse on
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/nvim with Ctrl-hjkl
@@ -35,6 +34,8 @@ set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/n
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
+set -g @catppuccin_flavour 'frappe'
+set -g @plugin 'catppuccin/tmux'
 # set -g @themepack 'powerline/default/cyan' # use this theme for tmux
 
 set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
