added fzf and upgraded lazyvim to 0.14.x (removes telescope etc.)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
+# look into getting poetry to play nicely with vim-tmux-navigator
+# https://github.com/christoomey/vim-tmux-navigator/issues/230#issuecomment-1609156039
+
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
 set -g mouse on
